syntax = "proto3";

option csharp_namespace = "RVAegis";

package face_recognition;

service FaceRecognition {
  // Метод для отправки изображений и меток
  rpc SendImages (ImageRequest) returns (ImageResponse);

  // Метод для получения результатов распознавания
  rpc GetResults (ResultRequest) returns (ResultResponse);
}

// Сообщение для передачи изображений и меток
message ImageRequest {
  repeated bytes images = 1;		// Массив изображений в байтах
  repeated string labels = 2;		// Массив меток (лейблов)
}

// Ответ на отправку изображений
message ImageResponse {
  bool success = 1;					// Успешно ли приняты данные
  string message = 2;				// Сообщение
}

// Сообщение для запроса результатов
message ResultRequest {
}

// Объект камеры
message CameraFrames {
  int32 camera_index = 1;
  repeated bytes frames = 2;
}

// Сообщение с результатами распознавания каждой активной камеры
message ResultResponse {
  repeated CameraFrames camera_frames = 1;		// Объект камеры, с кадрами и номером камеры
  repeated string recognized_labels = 2;		// Распознанные пользователи (лейблы)
}